# ChildUsageTracker

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.ini
dashboard/: index.html
src/: app.manifest  config.cpp  config.h  dialogs.cpp  dialogs.h  gist_client.cpp  gist_client.h  main.cpp  process_monitor.cpp  process_monitor.h  resources.rc  tracker.cpp  tracker.h
